# distributed_data_science_system

./: CMakeLists.txt  CMakeLists_minimal.txt  CMakeLists_simple.txt  README.md  dashboard.html  simple_test.cpp  test_activations.cpp
build_minimal/: ALL_BUILD.vcxproj  CMakeCache.txt  DistributedDataScience.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dds_demo.vcxproj  dds_demo.vcxproj.filters
build_minimal/dds_demo.dir/Release/: dds_demo.exe.recipe
build_minimal/dds_demo.dir/Release/dds_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_minimal/hdfs_stub/test_data/: dataset  test_matrix
build_minimal/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_minimal/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build_minimal/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_minimal/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_simple/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  DistributedDataScience.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dds_common.vcxproj  dds_common.vcxproj.filters  dds_tests.vcxproj  dds_tests.vcxproj.filters  dds_worker.vcxproj  dds_worker.vcxproj.filters
build_simple/Release/: dds_common.lib
build_simple/dds_common.dir/Release/: dds_common.lib.recipe
build_simple/dds_common.dir/Release/dds_common.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_simple/dds_tests.dir/Release/dds_tests.tlog/: CustomBuild.command.1.tlog
build_simple/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build_test/: ALL_BUILD.vcxproj  CMakeCache.txt  DistributedDataScience.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dds_demo.vcxproj  dds_demo.vcxproj.filters
build_test/dds_demo.dir/Release/dds_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  dds_demo.lastbuildstate
build_test/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_test/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
config/: dds_config.json
examples/: example_usage.cpp
include/algorithms/: advanced_algorithms.h  dbscan.h  kmeans.h  linear_regression.h  logistic_regression.h  mapreduce_framework.h
include/client/: dds_client.h
include/communication/: mpi_communicator.h
include/config/: configuration_manager.h
include/database/: database_manager.h
include/job_manager/: job_scheduler.h
include/monitoring/: system_monitor.h
include/notifications/: notification_center.h
include/pipeline/: data_orchestrator.h
include/profiling/: performance_profiler.h
include/resources/: resource_pool.h
include/security/: security_auditor.h
include/storage/: hadoop_storage.h  hdfs_storage.h
include/testing/: test_framework.h
include/utils/: circuit_breaker.h  eigen_stub.h  mpi_stub.h  rate_limiter.h  retry.h  types.h
include/validation/: config_validator.h
include/web/: web_server.h
include/worker/: worker_node.h
scripts/: build.sh
src/algorithms/: advanced_algorithms.cpp  linear_regression.cpp
src/communication/: mpi_communicator.cpp
src/config/: configuration_manager.cpp
src/database/: database_manager.cpp
src/monitoring/: system_monitor.cpp
src/notifications/: notification_center.cpp
src/pipeline/: data_orchestrator.cpp
src/profiling/: performance_profiler.cpp
src/resources/: resource_pool.cpp
src/security/: security_auditor.cpp
src/storage/: hadoop_storage.cpp  local_storage.cpp
src/testing/: test_framework.cpp
src/utils/: types.cpp
src/validation/: config_validator.cpp
src/web/: web_server.cpp
tests/: test_linear_regression.cpp
